<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL" Id="{e607aa11-c301-416f-9cbc-bc4f43af5299}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Module C2B1A1 , ET and Front
	ioControl : ioBundleControl;
	ioSafety : ioBundleSafety; //TODO , including B1's 
	ioET : ioBundleET;
	
	cylinderControls : ARRAY[1..15] OF RunCylinder;
	signalControls : ARRAY[1..25] OF RunSignal;
	axisControls: ARRAY[1..15] OF RunAxis;
	//
	materialSlots : ARRAY[1..5] OF RunMaterial;	//B1 , A1*3
	stations : ARRAY[1..11] OF POINTER TO RunUnitGeneric;
		
	interfaceControl : InterfaceControlV1;
	InterfaceManual : InterfaceManualV1;
	
	bObjectsLinked : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>